# colorization-metrics-ipol

./: DDL.json  README.md  main.py  requirements.txt  run.sh
.ipol/: Dockerfile  packages.txt
src/MANIQA/: README.md  pyproject.toml
src/MANIQA/scripts/: predict_one_image.py
src/MANIQA/src/maniqa/: __init__.py  inference.py
src/MANIQA/src/maniqa/models/: maniqa_net.py  swin.py
src/MANIQA/src/maniqa/timm/data/: transforms_factory.py
src/MANIQA/src/maniqa/timm/data/parsers/: parser_image_folder.py  parser_image_in_tar.py  parser_image_tar.py
src/MANIQA/src/maniqa/timm/models/: byoanet.py  byobnet.py  cait.py  coat.py  convit.py  convmixer.py  convnext.py  crossvit.py  cspnet.py  densenet.py  dla.py  dpn.py  efficientnet.py  fx_features.py  ghostnet.py  gluon_resnet.py  gluon_xception.py  hardcorenas.py  hrnet.py  hub.py  inception_resnet_v2.py  inception_v3.py  inception_v4.py  levit.py  mlp_mixer.py  mobilenetv3.py  nest.py  nfnet.py  pit.py  regnet.py  res2net.py  resnest.py  resnet.py  resnetv2.py  rexnet.py  selecsls.py  senet.py  sknet.py  swin_transformer.py  tnt.py  (+8 more)
src/MANIQA/src/maniqa/timm/scheduler/: multistep_lr.py
src/MANIQA/src/maniqa/timm/utils/: clip_grad.py
src/MANIQA/src/maniqa/utils/: config.py
src/colorization-metrics/: LICENSE  README.md  metric.py  pyproject.toml  requirements.txt
src/colorization-metrics/data/pictures/: references.md
src/colorization-metrics/data/unsplash/: removed.txt
src/colorization-metrics/src/colorization_metrics/: __init__.py  evaluate.py  main_cli.py  utils.py
src/colorization-metrics/src/colorization_metrics/metrics/: __init__.py  brisque.py  cdc.py  colorfulness.py  fid.py  lpips_dir.py  maniqa.py  niqe.py  psnr.py  ssim.py  train_brisque.py  train_niqe.py
src/matpy/: README.md  pyproject.toml
src/matpy/src/matpy/: __init__.py  imresize.py  rgb2gray.py
