# NOTE: Description
[project]
name = "maniqa"
version = "0.1.0"
description = "MANIQA importable."
authors = [
  { name = "Sidi Yang", email = "yangsidi99@connect.hku.hk" },
  { name = "Tianhe Wu", email = "wth22@mails.tsinghua.edu.cn" },
  { name = "Shuwei Shi", email = "shi-shuwei666@g.ecc.u-tokyo.ac.jp" },

]
maintainers = [
  { name = "Nicolas MAIGNAN", email = "nicolas.maignan@univ-lorraine.fr" },
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
# NOTE: Dependencies
dependencies = [
  "numpy (>=2.2.5,<3.0.0)",
  "opencv-python (>=4.11.0.86,<5.0.0.0)",
  "torch (>=2.7.0,<3.0.0)",
  "torchvision (>=0.22.0,<0.23.0)",
  "torchsummary (>=1.5.1,<2.0.0)",
  "tensorboardx (>=2.6.2.2,<3.0.0.0)",
  "tqdm (>=4.67.1,<5.0.0)",
  "einops (>=0.8.1,<0.9.0)",
  "pandas (>=2.2.3,<3.0.0)",
  "scikit-image (>=0.25.2,<0.26.0)",
  "requests (>=2.32.3,<3.0.0)",
  "platformdirs (>=4.3.8,<5.0.0)",
]


# NOTE: Optional dependencies
[dependency-groups]
dev = ["pylint>=3.3.7", "pyright>=1.1.402", "ruff>=0.12.0"]


# NOTE: Linters and formatter
[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812"]

[tool.ruff.lint.isort]
known-first-party = ["maniqa"]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pylint.format]
disable = [
  "invalid-name",
  "line-too-long",
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
  "no-name-in-module",
  "too-many-arguments",
  "too-many-locals",
  "too-many-positional-arguments",
  "too-many-statements",
  "undefined-variable",
  "unused-import",
  "unused-variable",
]
max-line-length = 88
init-hook = "import sys ; sys.path.append('.')"


# NOTE: Builder
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
