# NOTE: Description
[project]
name = "colorization-metrics"
version = "0.1.0"
requires-python = ">=3.11"
authors = [
  { name = "Nicolas MAIGNAN", email = "nicolas.maignan@univ-lorraine.fr" },
]
description = "A tool for quantitative assessment of video colorization."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["metrics", "measure", "colorization"]
# NOTE: Dependencies
dependencies = [
  "av>=14.4.0",
  "libsvm-official>=3.36.0",
  "lpips>=0.1.4",
  "maniqa",
  "matpy",
  "numpy>=2.2.6",
  "pytorch-fid>=0.3.0",
  "scikit-image>=0.25.2",
  "scikit-learn>=1.7.0",
  "scipy>=1.15.3",
  "tqdm>=4.67.1",
]

# NOTE: URLs
[project.urls]
repository = "https://gitlab.univ-lorraine.fr/maignan2/colorization-metrics"

# NOTE: Scripts
[project.scripts]
evaluate_colorization = "colorization_metrics.main_cli:main"

[tool.uv.sources]
maniqa = { git = "https://gitlab.inria.fr/nmaignan/MANIQA" }
matpy = { git = "https://gitlab.inria.fr/nmaignan/matpy" }

# NOTE: Linters and formatter
[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "TD"]

[tool.ruff.lint.isort]
known-first-party = ["colorization_metrics"]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pylint.format]
disable = [
  "empty-docstring",
  "fixme",
  "f-string-without-interpolation",
  "import-outside-toplevel",
  "invalid-name",
  "line-too-long",
  "logging-fstring-interpolation",
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
  "no-name-in-module",
  "syntax-error",
  "too-many-arguments",
  "too-many-branches",
  "too-many-locals",
  "too-many-positional-arguments",
  "too-many-statements",
  "undefined-variable",
  "unused-argument",
  "unused-import",
  "unused-variable",
  "wrong-import-order",
  "wrong-import-position",
]
max-line-length = 88
init-hook = "import sys ; sys.path.append('.')"

# NOTE: Optional dependencies
[dependency-groups]
dataset = [
  "matplotlib>=3.10.3",
  "pandas>=2.3.0",
  "requests>=2.32.4",
  "tables>=3.10.1",
]
dev = ["pylint>=3.3.7", "pyright>=1.1.402", "ruff>=0.12.0"]

# NOTE: Builder
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
